<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">ナビボイスチェンジャー</string>
    <string name="action_settings">設定</string>
    <string name="hello_world">Hello world!</string>
    <string name="menu_install">音声のインストール</string>
    <string name="menu_download">音声のダウンロード</string>
    <string name="menu_maint">メンテナンス</string>
    <string name="title_activity_install_list">音声データのインストール</string>
    <string name="err_broken_archive">音声データが壊れています。ダウンロードしなおしてください。</string>
    <string name="err_no_target">ナビの音声データフォルダが見つかりません。\n一度マップを起動し、どこでもいいのでナビを開始してすぐに終了してください。\nこれでデータフォルダが作成されます。</string>
    <string name="err_fileio">I/O エラーが発生しました。SDカードを確認してください。</string>
    <string name="install_error">インストールエラー</string>
    <string name="install_success_message">音声データは正しくインストールされました。\nもし変化がない場合は、マップ及びナビを完全に再起動してください。</string>
    <string name="install_success">インストール成功</string>
    <string name="close">閉じる</string>
    <string name="title_activity_main">ナビボイスチェンジャー</string>
    <string name="c_menu_rate">評価...</string>
    <string name="c_menu_delete">削除</string>
    <string name="c_menu_install">インストール</string>
    <string name="voice_deleted">音声データを削除しました。</string>
    <string name="err_unknown">不明なエラーが発生しました。</string>
    <string name="c_menu_preview">プレビュー</string>
    <string name="title_activity_maint">データメンテナンス</string>
    <string name="btn_purge_installed">インストールした音声データの削除</string>
    <string name="btn_purge_downloaded">ダウンロードデータを全て削除</string>
    <string name="desc_purge_installed">ナビの音声を初期状態にリセットします。\nこのアクションはナビのデータフォルダから、インストールした音声データ及びキャッシュデータを全て削除します。</string>
    <string name="desc_purge_downloaded">ダウンロードした音声データを全て削除します（データはこのアプリケーションから削除され、ナビの音声はそのままになります）。</string>
    <color name="maint_bg">#fff3f3f3</color>
    <string name="msg_installed_removed">音声データを削除しました。</string>
    <string name="msg_downloaded_removed">ダウンロードしたデータを削除しました。</string>
    <string name="title_activity_download">音声データのダウンロード</string>
    <string name="download_progress">ダウンロード中...</string>
    <string name="err_no_sd">外部ストレージが見つかりません。SDカードをチェックするか、ストレージの設定を確認してください。</string>
    <string name="err_no_sd_title">メディアエラー</string>
    <string name="c_menu_download">ダウンロード</string>
    <string name="accept">わかった</string>
    <string name="decline">断る!</string>
    <string name="tos_title">おことわり</string>
    <string name="tos">ダウンロードありがとうございます。すみませんが使うにあたり、以下に注意してください。\n\nこのアプリはマップと Android OS の現状の挙動に固定的に依存しています。それらは非公開のものであるため、将来の変更時にこのアプリは動作しなくなります。その場合の対応は全く保証できません。</string>
    <string name="send">送信</string>
    <string name="rate_sent">評価を送信しました。</string>
    <string name="rate_for">評価: </string>
    <string name="sent_failed">送信に失敗しました</string>
    <string name="download_failed">ダウンロードに失敗しました</string>
    <string name="download_success">ダウンロードが完了しました</string>
    <string name="btn_dl_opts">リストオプションの変更</string>
    <string name="dlopt_sort_order">並び順</string>
    <string name="dlopt_text_search">テキスト検索</string>
    <string name="dlopt_order_time">アップロード日時</string>
    <string name="dlopt_order_rating">評価</string>
    <string name="dlopt_order_dlcount">ダウンロード回数</string>
    <string name="apply">適用</string>
    <string name="dllist_opts_title">リストオプション</string>
    <string name="author">作者: %s</string>
    <string name="downloads">ダウンロード数: %d</string>
    <string name="anonymous">(匿名)</string>
    <string name="google_map_network_tts">ネットワークTTS</string>
    <string name="title_activity_settings">設定</string>
    <string name="menu_settings">設定</string>
    <string name="google_map">Googleマップ</string>
    <string name="remote_tts">リモートTTSサービス</string>
    <string name="enable_voicevox_engine">VOICEVOXエンジンを使用する</string>
    <string name="url">URL</string>
    <string name="username">ユーザー名</string>
    <string name="password">パスワード</string>
    <string name="voicevox_engine">VOICEVOXエンジン</string>
    <string name="get_voicevox_voices">シナリオ一覧を取得</string>
    <string name="voice_selection">ボイス選択</string>
    <string name="select_player">キャラ選択</string>
    <string name="select_style">スタイル選択</string>
    <string name="select_scenario">シナリオ選択</string>
</resources>