<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <PreferenceCategory app:title="@string/google_map">
        <ListPreference
            app:key="google_map_network_tts"
            app:title="@string/google_map_network_tts"
            app:entries="@array/google_map_network_tts_config"
            app:entryValues="@array/google_map_network_tts_config_values"
            app:defaultValue="disable"
            app:useSimpleSummaryProvider="true" />
    </PreferenceCategory>

    <PreferenceCategory app:title="@string/remote_tts">

        <PreferenceCategory app:title="@string/voice_selection">
            <ListPreference
                app:key="player"
                app:title="@string/select_player"
                app:useSimpleSummaryProvider="true" />
            <ListPreference
                app:key="style"
                app:title="@string/select_style"
                app:useSimpleSummaryProvider="true" />
        </PreferenceCategory>

        <PreferenceCategory app:title="@string/voicevox_engine">
            <EditTextPreference
                app:key="voicevox_engine_url"
                app:title="@string/url"
                app:useSimpleSummaryProvider="true" />
            <EditTextPreference
                app:key="voicevox_engine_username"
                app:title="@string/username"
                app:defaultValue=""
                app:useSimpleSummaryProvider="true" />
            <EditTextPreference
                app:key="voicevox_engine_password"
                app:title="@string/password"
                app:defaultValue=""
                app:useSimpleSummaryProvider="true" />
            <Preference
                app:key="get_voicevox_voices"
                app:title="@string/get_voicevox_voices" />
        </PreferenceCategory>
    </PreferenceCategory>
</PreferenceScreen>