<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin" >

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dlopt_sort_order"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <RadioGroup
        android:id="@+id/dlopt_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content" >

        <RadioButton
            android:id="@+id/dlopt_order_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dlopt_order_time" />

        <RadioButton
            android:id="@+id/dlopt_order_rating"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dlopt_order_rating" />

        <RadioButton
            android:id="@+id/dlopt_order_dlcount"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/dlopt_order_dlcount" />
    </RadioGroup>

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dlopt_text_search"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <EditText
        android:id="@+id/dlopt_filter_q"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10" >

        <requestFocus />
    </EditText>

</LinearLayout>
