<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="jp.nekoteki.android.navivoicechanger.MainMenuActivity" >

    <Button
        android:id="@+id/btn_menu_install"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@android:drawable/ic_menu_add"
        android:paddingRight="32dp"
        android:text="@string/menu_install" />

    <Button
        android:id="@+id/btn_download"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@android:drawable/ic_menu_search"
        android:gravity="center_vertical|center_horizontal"
        android:paddingRight="32dp"
        android:text="@string/menu_download" />

    <Button
        android:id="@+id/btn_menu_maint"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@android:drawable/ic_menu_manage"
        android:paddingRight="32dp"
        android:text="@string/menu_maint" />

    <Button
        android:id="@+id/btn_menu_settings"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:paddingRight="32dp"
        android:text="@string/menu_settings" />
</LinearLayout>