<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/LinearLayout1"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".MaintActivity" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:background="@color/maint_bg"
        android:orientation="vertical"
        android:padding="8dp" >

        <Button
            android:id="@+id/btn_purge_installed"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_purge_installed" />

        <TextView
            android:id="@+id/text_btm_guide"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc_purge_installed" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/maint_bg"
        android:orientation="vertical"
        android:padding="8dp" >

        <Button
            android:id="@+id/btn_purge_downloaded"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btn_purge_downloaded" />

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/desc_purge_downloaded" />

    </LinearLayout>

</LinearLayout>
